--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,38 +29,32 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter:
-    sdk: flutter
-
+  animate_icons: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter:
+    sdk: flutter
   font_awesome_flutter: 10.3.0
+  google_fonts: ^4.0.3 # font dependency
   hovering: ^1.0.4
   shared_preferences: ^2.0.15
   video_player: 2.4.10
 
   # VideoPlayer plays video after users completely scroll down so that play one video at once
-  visibility_detector: 0.3.3 
-  animate_icons: ^2.0.0
-  google_fonts: ^4.0.3 # font dependency
+  visibility_detector: 0.3.3
+
+  go_router: ^6.0.10
 
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^2.0.0
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -71,19 +65,15 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/images/test.gif
-      - assets/videos/smart_watch.mp4
-      - assets/images/city.jpg
-    
+    - assets/images/test.gif
+    - assets/videos/smart_watch.mp4
+    - assets/images/city.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
