--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: 10.3.0
+  gallery_saver: ^2.3.2
   go_router: ^6.0.10
   google_fonts: ^4.0.3
   hovering: ^1.0.4
