--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   go_router: ^6.0.10
   google_fonts: ^4.0.3
   hovering: ^1.0.4
+  image_picker: 0.8.6
   permission_handler: ^10.2.0
   shared_preferences: ^2.0.15
   video_player: 2.4.10
